--- a/projects/collect/src/assets/i18n/ka-IN.json
+++ b/projects/collect/src/assets/i18n/ka-IN.json
@@ -1,118 +1,118 @@
 {
-    "language.english":"English",
-    "language.hindi":"हिन्दी",
-    "language.tamil":"தமிழ்",
-    "language.kannada":"ಕನ್ನಡ",
-    "language.marathi":"मराठी",
-    "language.malayalam":"മലയാളം",
-    "language.telugu":"తెలుగు",
-    "language.bengali":"বাংলা",
-    "app.title": "coswara",
-    "metadata.title.no_metadata": "ನಾವು ಮುಂದುವರಿಯಲು ಕೆಲವು ಮಾಹಿತಿಯ ಅಗತ್ಯವಿದೆ!",
-    "metadata.tabs.disclaimer": "ಹಕ್ಕುತ್ಯಾಗ",
-    "metadata.tabs.metadata": "ಮೆಟಾಡೇಟಾ",
-    "metadata.tabs.health_status": "ಆರೋಗ್ಯ ಸ್ಥಿತಿ",
-    "metadata.disclaimer.para1": "ಈ ಅಧ್ಯಯನವು ಮಾನವನ ಧ್ವನಿಯನ್ನು ಉಸಿರಾಟದ ತೊಂದರೆಯನ್ನು ಗುರುತಿಸುವುದಕ್ಕಾಗಿ ಸಂವೇದನೆ ಉನ್ನತ ಮಟ್ಟದ ವರದಿ ಮಾಡಿದ್ದಾರೆ ಇತರ ಹಿಂದಿನ ಅಧ್ಯಯನಗಳಲ್ಲಿ ನಿರ್ಮಾಣವಾಗುತ್ತದೆ. ರೋಗ ಪತ್ತೆ ಅಂಕಿಅಂಶಗಳ ಪ್ರಾಮುಖ್ಯತೆಯನ್ನು ಯಾವುದೇ ಸಾಧನಗಳು ಕೂಡ ಮುಂದಿನ ದಿನಗಳಲ್ಲಿ ಈ ಅಪ್ಲಿಕೇಶನ್ ಭಾಗವಾಗಿ ಅಳವಡಿಸಲಾಗಿದೆ. ಈ ಅಧ್ಯಯನದಲ್ಲಿ ಪಾಲ್ಗೊಳ್ಳುವಿಕೆಯನ್ನು ಸಂಪೂರ್ಣವಾಗಿ ವೈಯಕ್ತಿಕವಾಗಿದ್ದು ಮತ್ತು ವಿವರಗಳು ಸಂಗ್ರಹಿಸಿದ ವೈಯಕ್ತಿಕ ಮಾಹಿತಿಯನ್ನು ಒಳಗೊಂಡಿರುವುದಿಲ್ಲ.",
-    "metadata.disclaimer.para2": "ಇಡೀ ರೆಕಾರ್ಡಿಂಗ್ ಮತ್ತು ದತ್ತಾಂಶ ಸಂಗ್ರಹವನ್ನು ಕೇವಲ 5 ನಿಮಿಷಗಳ ಬಗ್ಗೆ ತೆಗೆದುಕೊಳ್ಳಬೇಕು. ದಯವಿಟ್ಟು ಧ್ವನಿಮುದ್ರಣದ ಸಮಯದಲ್ಲಿ ನಿಮ್ಮ ಮುಖದ 20 ಸೆಂ ಸುಮಾರು ನಿಮ್ಮ ಸಾಧನ ಇರಿಸಿಕೊಳ್ಳಲು ಮತ್ತು ಒಂದು ಸ್ತಬ್ಧ ಪರಿಸರದಲ್ಲಿ ರೆಕಾರ್ಡಿಂಗ್ ನಿರ್ವಹಿಸಲು. ರೆಕಾರ್ಡಿಂಗ್ ಸಾಧನವು ಶುದ್ಧೀಕರಣ / ನೈರ್ಮಲ್ಯ ಮೊದಲು ಬೇರೆಯವರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಬಹುದಾದ ಮಾಡಬಾರದು.",
-    "metadata.disclaimer.para3": "ಮ್ಯಾಸಚೂಸೆಟ್ಸ್ ಇನ್ಸ್ಟಿಟ್ಯೂಟ್ ನೈತಿಕ ಸಮಿತಿಯ ಆಕ್ರಮಣಕಾರಿಯಲ್ಲದ ಧ್ವನಿಮುದ್ರಣಗಳಿಗೆ ವಿಧಾನ ಅಂಗೀಕರಿಸಿದ್ದಾರೆ.",
-    "metadata.disclaimer.para4": "ಕ್ಲಿಕ್ ಮೂಲಕ ನಮ್ಮ <a href='https://coswara.iisc.ac.in/terms' target='_blank'> ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು </a> ಅರಿತಿದ್ದ ಆರಂಭಿಸಲು ನೀವು ಡೇಟಾವನ್ನು ಮತ್ತು ಪ್ರಚೋದನೆ ಸಂಗ್ರಹಕ್ಕೆ ಮುಂದುವರಿಯುವುದಾಗಿ",
-    "metadata.disclaimer.para4.alternate": "ಸ್ವೀಕರಿಸಿದ್ದಾರೆ ನಮ್ಮ <a href='https://coswara.iisc.ac.in/terms' target='_blank'> ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು </a> ಅನ್ನು",
-    "metadata.disclaimer.para5": "ಯಾವುದೇ ಪ್ರಶ್ನೆಗಳಿಗೆ, ದಯವಿಟ್ಟು ಸಂಪರ್ಕ <a href='mailto:sriramg@iisc.ac.in'> sriramg@iisc.ac.in </a>",
-    "metadata.buttons.start": "ಆರಂಭ",
-    "metadata.buttons.start_over": "ಆರಂಭಿಸು",
-    "metadata.buttons.continue": "ಮುಂದುವರಿಸಲು",
-    "metadata.buttons.previous": "ಹಿಂದಿನ",
-    "metadata.buttons.next": "ಮುಂದಿನ",
-    "metadata.buttons.submit": "ಸಲ್ಲಿಸು",
-    "forms.label.age": "ವಯಸ್ಸು",
-    "forms.label.gender": "ಲಿಂಗ",
-    "forms.label.english_proficient": "ನೀವು ಇಂಗ್ಲೀಷ್ ಪ್ರವೀಣ ಬಯಸುವಿರಾ?",
-    "forms.label.returning_user": "ನೀವು ಹಿಂದಿರುಗಿದ ಬಳಕೆದಾರರೇ?",
-    "forms.label.location": "ಸ್ಥಳ",
-    "forms.label.country": "ಕಂಟ್ರಿ",
-    "forms.label.state": "ರಾಜ್ಯ / ಪ್ರಾಂತ್ಯ",
-    "forms.label.locality": "ಸ್ಥಳ / ಜಿಲ್ಲೆ",
-    "forms.label.current_status": "ಪ್ರಸ್ತುತ ಸ್ಥಿತಿ",
-    "forms.label.health_conditions": "ಆರೋಗ್ಯ ನಿಯಮಗಳು",
-    "forms.errors.required": "ಅಗತ್ಯ",
-    "forms.errors.age.valid": "ಮಾನ್ಯ ವಯಸ್ಸಿನ ಕಂಡುಬರುತ್ತಿಲ್ಲ",
-    "forms.errors.field_required": "ಗುರುತು ಎಲ್ಲಾ ಜಾಗ (*) ಕಡ್ಡಾಯವಾಗಿರುತ್ತದೆ",
-    "forms.options.male": "ಪುರುಷ",
-    "forms.options.female": "ಸ್ತ್ರೀ",
-    "forms.options.other": "ಇತರೆ",
-    "forms.options.yes": "ಹೌದು",
-    "forms.options.no": "ಯಾವುದೇ",
-    "forms.option.positive_mild": "ನಾನು Covid -19 ಗುರುತಿಸಿದೆ ಮತ್ತು ಸೌಮ್ಯ ರೋಗಲಕ್ಷಣಗಳನ್ನು",
-    "forms.option.positive_moderate": "ನಾನು Covid -19 ಗುರುತಿಸಿದೆ ಮತ್ತು ಮಧ್ಯಮ ರೋಗಲಕ್ಷಣಗಳನ್ನು",
-    "forms.option.recovered_full": "ನಾನು Covid -19 ಜೊತೆ ಗುರುತಿಸಲಾಗುತ್ತಿತ್ತು ಮತ್ತು ಸಂಪೂರ್ಣವಾಗಿ ಚೇತರಿಸಿಕೊಂಡ",
-    "forms.option.resp_illness_not_identified": "ನಾನು ಇತರ ಮೊದಲೇ ಅಸ್ತಿತ್ವದಲ್ಲಿರುವ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳ ಆದರೆ Covid -19 ಜೊತೆ ಗುರುತಿಸಲಾಗಿಲ್ಲ",
-    "forms.option.no_resp_illness_exposed": "ನಾನು ಯಾವುದೇ ಉಸಿರಾಟದ ತೊಂದರೆಯನ್ನು ಹೊಂದಿರುತ್ತವೆ ಆದರೆ ಸಂಪರ್ಕದ ಮೂಲಕ ವೈರಾಣುವಿನ ಗೆ ಬಹಿರಂಗಗೊಂಡವು ಮಾಡಬಹುದು",
-    "forms.option.healthy": "ನಾನು ಯಾವುದೇ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳ ಹೊಂದಿಲ್ಲ",
-    "forms.option.none_of_the_above": "ಮೇಲಿನ ಯಾವುದೂ ಅಲ್ಲ",
-    "forms.option.cold": "ಶೀತಲ",
-    "forms.option.cough": "ಕೆಮ್ಮು",
-    "forms.option.fever": "ಜ್ವರ",
-    "forms.option.pneumonia": "ನ್ಯುಮೋನಿಯಾ",
-    "forms.option.loss_of_smell": "ಸ್ಮೆಲ್ ನಷ್ಟ",
-    "forms.option.smoker": "ಧೂಮಪಾನಿಗಳ",
-    "forms.option.asthma": "ಉಬ್ಬಸ",
-    "forms.option.cld": "ದೀರ್ಘಕಾಲದ ಲಂಗ್ ಡಿಸೀಸ್",
-    "forms.option.ht": "ಅಧಿಕ ರಕ್ತದೊತ್ತಡ",
-    "forms.option.ihd": "ರಕ್ತಕೊರತೆಯ ಹೃದಯ ರೋಗ",
-    "forms.option.diabetes": "ಮಧುಮೇಹ",
-    "record.message.info": "ದಯವಿಟ್ಟು ಸ್ತಬ್ಧ ಪರಿಸರದಲ್ಲಿ ನೀವು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ ಮತ್ತು ನಿಮ್ಮ ಮುಖದ 20 ಸೆಂ ಸುಮಾರು ನಿಮ್ಮ ಸಾಧನಗಳನ್ನು ಇಡಲು",
-    "record.title.breathing-shallow": "ಉಸಿರಾಟ (ಆಳವಿಲ್ಲದ)",
-    "record.title.breathing-deep": "ಉಸಿರಾಟದ (ಆಳ)",
-    "record.title.cough-shallow": "ಕೆಮ್ಮು (ಆಳವಿಲ್ಲದ)",
-    "record.title.cough-heavy": "ಕೆಮ್ಮು (ಭಾರೀ)",
-    "record.title.vowel-a": "ಸ್ವರ / ಒಂದು /",
-    "record.title.vowel-e": "ಸ್ವರ / ಇ /",
-    "record.title.vowel-o": "ಸ್ವರ / ಒ /",
-    "record.title.counting-normal": "ಎಣಿಕೆಯ (ಸಾಮಾನ್ಯ)",
-    "record.title.counting-fast": "ಎಣಿಕೆಯ (ವೇಗವಾಗಿ)",
-    "record.title.done": "ಮುಕ್ತಾಯಗೊಂಡ",
-    "record.description.breathing-shallow": "ವೇಗದ 5 ಬಾರಿ ಉಸಿರಾಡುವ",
-    "record.description.breathing-deep": "ಆಳವಾಗಿ 5 ಬಾರಿ ಉಸಿರಾಡುವ",
-    "record.description.cough-shallow": "ಕೆಮ್ಮು ಸ್ವಲ್ಪ 3 ಬಾರಿ",
-    "record.description.cough-heavy": "ಕೆಮ್ಮು ಆಳವಾಗಿ 3 ಬಾರಿ",
-    "record.description.vowel-a": "ಸೇ / ಎಲ್ಲಿಯವರೆಗೆ ಸಾಧ್ಯವಾದಷ್ಟು \"ನಿರ್ಮಿಸಲಾಗುತ್ತದೆ\" ಮತ್ತು ಉಳಿಸಿಕೊಳ್ಳಲು ಒಂದು /",
-    "record.description.vowel-e": "ಸೇ / ಇ / \"ಬೀಟ್\" ಮತ್ತು ಎಲ್ಲಿಯವರೆಗೆ ಸಾಧ್ಯವಾದಷ್ಟು ಉಳಿಸಿಕೊಳ್ಳಲು ಮಾಹಿತಿ",
-    "record.description.vowel-o": "ಸೇ / ಒ ಎಲ್ಲಿಯವರೆಗೆ ಸಾಧ್ಯವಾದಷ್ಟು \"ತಂಪಾದ\" ಮತ್ತು ಉಳಿಸಿಕೊಳ್ಳಲು ಮಾಹಿತಿ /",
-    "record.description.counting-normal": "1 ರಿಂದ 20 ಗೆ ಎಣಿಕೆ",
-    "record.description.counting-fast": "ವೇಗವಾಗಿ 1 ರಿಂದ 20 ಕೌಂಟ್",
-    "record.description.done": "ನಿಮ್ಮ ಭಾಗವಹಿಸುವಿಕೆ ಧನ್ಯವಾದಗಳು!",
-    "record.message.initializing": "ಪ್ರಾರಂಭಿಸಲಾಗುತ್ತಿದೆ! ದಯಮಾಡಿ ನಿರೀಕ್ಷಿಸಿ...",
-    "record.message.uploading": "ಅಪ್ಲೋಡ್! ದಯಮಾಡಿ ನಿರೀಕ್ಷಿಸಿ...",
-    "record.button.start_recording": "ಪ್ರಾರಂಭಿಸಿ ರೆಕಾರ್ಡಿಂಗ್",
-    "record.button.stop_recording": "ನಿಲ್ಲಿಸಿ ರೆಕಾರ್ಡಿಂಗ್",
-    "record.button.play_sample": "ಪ್ಲೇ ಮಾದರಿ",
-    "record.button.stop_playing": "ನಿಲ್ಲಿಸಿ ಪ್ಲೇಯಿಂಗ್",
-    "record.button.play": "ಪ್ಲೇ",
-    "record.button.stop": "ನಿಲ್ಲಿಸಿ",
-    "record.button.upload": "ಅಪ್ಲೋಡ್",
-    "record.button.record_again": "ಮತ್ತೆ ರೆಕಾರ್ಡ್",
-    "record.button.cancel": "ರದ್ದು",
-    "thanks.heading": "ನಿಮ್ಮ ಭಾಗವಹಿಸುವಿಕೆ ಧನ್ಯವಾದಗಳು!",
-    "thanks.message.para1": "ಇದರ ಭಾಗವಾಗಿ ಧನ್ಯವಾದಗಳು! ನಿಮ್ಮ ಸ್ನೇಹಿತರು ಮತ್ತು ಸಂಬಂಧಿಗಳು ನಡುವೆ ಹಂಚಿಕೊಳ್ಳಿ.",
-    "thanks.message.para2": "ನಲ್ಲಿ ನಮ್ಮನ್ನು ಅನುಸರಿಸಿ <a href='https://www.facebook.com/coswara.iisc'> ಫೇಸ್ಬುಕ್ </a> ಮತ್ತು <a href='https://twitter.com/coswara_iisc'> ಟ್ವಿಟರ್ </a> ಇತ್ತೀಚಿನ ನವೀಕರಣಗಳನ್ನು ಪಡೆಯಲು.",
-    "thanks.button.start_new_session": "ಹೊಸ ಸೆಷನ್ ಪ್ರಾರಂಭಿಸಿ",
-    "thanks.warning.reuse": "ರೆಕಾರ್ಡಿಂಗ್ ಸಾಧನವು ಶುದ್ಧೀಕರಣ / ನೈರ್ಮಲ್ಯ ಮೊದಲು ಬೇರೆಯವರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಬಹುದಾದ ಮಾಡಬಾರದು.",
-    "thanks.developed_by": "ಅಭಿವೃದ್ಧಿ",
-    "thanks.let_us_know_comments": "ನಿಮ್ಮಪ್ರತಿಕ್ರಿಯೆ ತಿಳಿಸಿ!",
-    "thanks.feedback": "ಪ್ರತಿಕ್ರಿಯೆ",
-    "thanks.button.send_feedback": "ಪ್ರತಿಕ್ರಿಯೆ ಕಳುಹಿಸಿ",
-    "thanks.feedback.complete": "ನಿಮ್ಮ ಪ್ರತಿಕ್ರಿಯೆಗೆ ಧನ್ಯವಾದಗಳು!",
-    "note.title": "ಸೂಚನೆ",
-    "note.para1": "ನೀವು ಫೇಸ್ಬುಕ್ ಅಥವಾ ಟ್ವಿಟರ್ ಅಪ್ಲಿಕೇಶನ್ ನಿಂದ ಪುಟವನ್ನು ಭೇಟಿ, ನೀವು ಮೈಕ್ರೊಫೋನ್ ಬಳಸಿ ತೊಂದರೆ ಎದುರಿಸಬೇಕಾಗಬಹುದು. ದಯವಿಟ್ಟು ಬೆಂಬಲಿಸುವ ಬ್ರೌಸರ್ ಯಾವುದೇ ಕೆಳಗೆ url ತೆರೆಯಲು.",
-    "note.supported_browsers": "ಬೆಂಬಲಿತ ಬ್ರೌಸರ್ಗಳು",
-    "browsers.chrome": "ಕ್ರೋಮ್",
-    "browsers.safari": "ಸಫಾರಿ",
-    "browsers.firefox": "ಫೈರ್ಫಾಕ್ಸ್",
-    "device.pc": "ಪಿಸಿ",
-    "device.mac": "ಮ್ಯಾಕ್",
-    "device.android": "ಆಂಡ್ರಾಯ್ಡ್",
-    "device.ios": "ಐಒಎಸ್",
-    "note.button.dismiss": "ವಜಾಗೊಳಿಸಿ",
-    "forms.label.using_mask": "ನೀವು ಈಗ ಮುಖವಾಡ ಧರಿಸಿದ್ದೀರಾ?",
-	"forms.option.bd": "ಉಸಿರಾಟದ ತೊಂದರೆಗಳು"
+  "language.english": "English",
+  "language.hindi": "हिन्दी",
+  "language.tamil": "தமிழ்",
+  "language.kannada": "ಕನ್ನಡ",
+  "language.marathi": "मराठी",
+  "language.malayalam": "മലയാളം",
+  "language.telugu": "తెలుగు",
+  "language.bengali": "বাংলা",
+  "app.title": "coswara",
+  "metadata.title.no_metadata": "ನಾವು ಮುಂದುವರಿಯಲು ಕೆಲವು ಮಾಹಿತಿಗಳ ಅಗತ್ಯವಿದೆ!",
+  "metadata.tabs.disclaimer": "ಹಕ್ಕುನಿರಾಕರಣೆ  ",
+  "metadata.tabs.metadata": "ಮೆಟಾಡೇಟಾ",
+  "metadata.tabs.health_status": "ಆರೋಗ್ಯದ ಸ್ಥಿತಿ",
+  "metadata.disclaimer.para1": "ಈ ಅಧ್ಯಯನವು ಮಾನವನ ಧ್ವನಿಯ ಆಧಾರದ ಮೇಲೆ covid-19 ರೀತಿಯ ಶ್ವಾಸಕೋಶದ ಕಾಯಿಲೆಗಳನ್ನು ಗುರುತಿಸುವ ಸಲುವಾಗಿದೆ. ಈ ಹಿಂದೆ ಇಂತಹ ಅಧ್ಯಯನಗಳಲ್ಲಿ ಉನ್ನತ ಮಟ್ಟದ ಸಂವೇದನೆ ವರದಿಯಾಗಿದೆ. ರೋಗ ಪತ್ತೆ ಮಾಡುವ ಯಾವುದೇ ಸಾಧನಗಳನ್ನು ಅಂಕಿಅಂಶಗಳ ಮಹತ್ವದ ಆಧಾರದ ಮೇಲೆ ಈ ಅಪ್ಲಿಕೇಶನ್ನಲ್ಲಿ ಮುಂದಿನ ದಿನಗಳಲ್ಲಿ ಅಳವಡಿಸಲಾಗುತ್ತದೆ. ಈ ಅಭಿಯಾನದಲ್ಲಿ ಪಾಲ್ಗೊಳ್ಳುವಿಕೆ ಆಸಕ್ತರ ಸ್ವಇಚ್ಛೆಯಾಗಿರುತ್ತದೆ. ಈ ಮುಖಾಂತರ ಸಂಗ್ರಹಿಸಿದ ವಿವರಗಳು ಯಾವುದೇ ವೈಯಕ್ತಿಕ ಮಾಹಿತಿಗಳನ್ನು ಒಳಗೊಂಡಿರುವುದಿಲ್ಲ.",
+  "metadata.disclaimer.para2": "ಇಡೀ ರೆಕಾರ್ಡಿಂಗ್ ಮತ್ತು ದತ್ತಾಂಶ ಸಂಗ್ರಹ ಮಾಡಲು ಕೇವಲ 5 ನಿಮಿಷಗಳು ಬೇಕಾಗುತ್ತದೆ. ದಯವಿಟ್ಟು ಧ್ವನಿಮುದ್ರಣದ ಸಮಯದಲ್ಲಿ ನಿಮ್ಮ ಸಾಧನವನ್ನು (ಸ್ಮಾರ್ಟ್ ಫೋನ್  / ಲ್ಯಾಪ್ಟಾಪ್) ಮುಖದಿಂದ ಸುಮಾರು 20 ಸೆಂಟಿ ಮೀಟರ್ ದೂರ ಇಟ್ಟುಕೊಳ್ಳಿ. ಒಂದು ನಿಶ್ಯಬ್ದ ಪರಿಸರದಲ್ಲಿ ರೆಕಾರ್ಡಿಂಗ್ ನಿರ್ವಹಿಸಿ. ರೆಕಾರ್ಡಿಂಗ್ ಸಾಧನವನ್ನು ಬೇರೆಯವರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳುವುದನ್ನು ನಿರಾಕರಿಸುವುದು ಉತ್ತಮ ಅಥವಾ ಶುದ್ಧೀಕರಣ / ನೈರ್ಮಲ್ಯ ಕಾಪಾಡಿಕೊಂಡು ಹಂಚಿಕೊಳ್ಳುವುದು ಉತ್ತಮ.",
+  "metadata.disclaimer.para3": "ಭಾರತೀಯ ವಿಜ್ಞಾನ ಸಂಸ್ಥೆಯ ನೈತಿಕ ಸಮಿತಿಯು ಅಕ್ರಮಣಕಾರಿಯಲ್ಲದ ಧ್ವನಿಮುದ್ರಣಗಳ ವಿಧಾನವನ್ನು ಅಂಗೀಕರಿಸಿದ್ದಾರೆ.",
+  "metadata.disclaimer.para4": "\"ಆರಂಭಿಸು\" ಕ್ಲಿಕ್ ಮಾಡುವ ಮೂಲಕ ನಮ್ಮ <a href='https://coswara.iisc.ac.in/terms' target='_blank'> ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು </a> ಒಪ್ಪಿಕೊಂಡಿದ್ದೀರಿ ಮತ್ತು ನಿಮ್ಮ ಡೇಟಾವನ್ನು ಕೇವಲ ಆವಿಷ್ಕಾರ ಮತ್ತು ಪ್ರಗತಿಗಾಗಿ ನೀಡಲು ಸಮ್ಮತಿಸಿದ್ದೀರಿ,",
+  "metadata.disclaimer.para4.alternate": "ನೀವು ನಮ್ಮ <a href='https://coswara.iisc.ac.in/terms' target='_blank'> ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು </a> ಒಪ್ಪಿಕೊಂಡಿದ್ದೀರಿ.",
+  "metadata.disclaimer.para5": "ಯಾವುದೇ ಪ್ರಶ್ನೆಗಳಿಗೆ, ದಯವಿಟ್ಟು <a href='mailto:sriramg@iisc.ac.in'> sriramg@iisc.ac.in </a> ಗೆ ಸಂಪರ್ಕಿಸಿ.",
+  "metadata.buttons.start": "ಆರಂಭಿಸಿ",
+  "metadata.buttons.start_over": "ಮತ್ತೆ ಆರಂಭಿಸಿ",
+  "metadata.buttons.continue": "ಮುಂದುವರಿಸಿ",
+  "metadata.buttons.previous": "ಹಿಂದೆ",
+  "metadata.buttons.next": "ಮುಂದೆ",
+  "metadata.buttons.submit": "ಸಮರ್ಪಿಸಿ",
+  "forms.label.age": "ವಯಸ್ಸು",
+  "forms.label.gender": "ಲಿಂಗ",
+  "forms.label.english_proficient": "ನೀವು ಇಂಗ್ಲೀಷ್ ಪ್ರವೀಣತೆ ಹೊಂದಿರುವಿರೇ?",
+  "forms.label.returning_user": "ನೀವು ಈ ಹಿಂದೆ ಯಾವಾಗಾದರೂ ರೆಕಾರ್ಡಿಂಗ್ ಮಾಡಿದ್ದೀರಾ?",
+  "forms.label.location": "ಸ್ಥಳ",
+  "forms.label.country": "ದೇಶ",
+  "forms.label.state": "ರಾಜ್ಯ",
+  "forms.label.locality": "ಜಿಲ್ಲೆ",
+  "forms.label.current_status": "ಪ್ರಸ್ತುತ ಸ್ಥಿತಿ",
+  "forms.label.health_conditions": "ಆರೋಗ್ಯದ ಸ್ಥಿತಿ",
+  "forms.errors.required": "ಅವಶ್ಯ",
+  "forms.errors.age.valid": "ವಯಸ್ಸು ತಪ್ಪಾಗಿರುವಂತಿದೆ",
+  "forms.errors.field_required": "(*) ಗುರುತು ಹೊಂದಿರುವ ಅಂಶಗಳು ಕಡ್ಡಾಯವಾಗಿರುತ್ತದೆ",
+  "forms.options.male": "ಪುರುಷ",
+  "forms.options.female": "ಸ್ತ್ರೀ",
+  "forms.options.other": "ಇತರೆ",
+  "forms.options.yes": "ಹೌದು",
+  "forms.options.no": "ಇಲ್ಲ",
+  "forms.option.positive_mild": "ನಾನು Covid-19 ಸೋಂಕಿತ ಎಂದು ಗುರುತಿಸಲಾಗಿದೆ, ಹಾಗೂ ಮಂದರವಾದ (Mild) ರೋಗಲಕ್ಷಣಗಳನ್ನು ಹೊಂದಿರುವೆ.",
+  "forms.option.positive_moderate": "ನಾನು Covid-19 ಸೋಂಕಿತ ಎಂದು ಗುರುತಿಸಲಾಗಿದೆ, ಹಾಗೂ ಮಧ್ಯಮ ತೀವ್ರತೆಯ ರೋಗಲಕ್ಷಣಗಳನ್ನು ಹೊಂದಿರುವೆ.",
+  "forms.option.recovered_full": "ನಾನು Covid-19 ಸೋಂಕಿತ ಎಂದು ಗುರುತಿಸಲಾಗಿತ್ತು, ಈಗ ಸಂಪೂರ್ಣವಾಗಿ ಚೇತರಿಸಿಕೊಂಡಿದ್ದೇನೆ.",
+  "forms.option.resp_illness_not_identified": "ನನಗೆ ಇತರೆ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳ ತೊಂದರೆ ಇದೆ, ಆದರೆ Covid-19 ಜೊತೆ ಗುರುತಿಸಲಾಗಿಲ್ಲ",
+  "forms.option.no_resp_illness_exposed": "ನಾನು ಯಾವುದೇ ಉಸಿರಾಟದ ತೊಂದರೆಯನ್ನು ಹೊಂದಿಲ್ಲ, ಆದರೆ ಸಂಪರ್ಕದ ಮೂಲಕ Covid-19 ವೈರಾಣು ಶಂಕಿತನಾಗಿರಬಹುದು.",
+  "forms.option.healthy": "ನಾನು ಯಾವುದೇ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳನ್ನು ಹೊಂದಿಲ್ಲ",
+  "forms.option.none_of_the_above": "ಮೇಲಿನ ಯಾವುದೂ ಅಲ್ಲ",
+  "forms.option.cold": "ಶೀತ",
+  "forms.option.cough": "ಕೆಮ್ಮು",
+  "forms.option.fever": "ಜ್ವರ",
+  "forms.option.pneumonia": "ನ್ಯುಮೋನಿಯಾ",
+  "forms.option.loss_of_smell": "ವಾಸನೆ ನಷ್ಟ",
+  "forms.option.smoker": "ಧೂಮಪಾನಿ",
+  "forms.option.asthma": "ಉಬ್ಬಸ (ಆಸ್ತ್ಮ) ",
+  "forms.option.cld": "ದೀರ್ಘಕಾಲದ ಶ್ವಾಸಕೋಶದ ಕಾಯಿಲೆ",
+  "forms.option.ht": "ಅಧಿಕ ರಕ್ತದೊತ್ತಡ (ಬಿ.ಪಿ)",
+  "forms.option.ihd": "ರಕ್ತಕೊರತೆಯ ಹೃದಯ ರೋಗ",
+  "forms.option.diabetes": "ಮಧುಮೇಹ",
+  "record.message.info": "ದಯವಿಟ್ಟು ನಿಶ್ಶಬ್ದ ಪರಿಸರದಲ್ಲಿ ಇದ್ದೀರೆಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ ಮತ್ತು ನಿಮ್ಮ ಸಾಧನವನ್ನು  ನಿಮ್ಮ ಮುಖದ 20 ಸೆಂಟಿಮೀಟರ್ ದೂರದಲ್ಲಿ ಇಟ್ಟುಕೊಳ್ಳಿ.",
+  "record.title.breathing-shallow": "ಉಸಿರಾಟ (ವೇಗವಾಗಿ)",
+  "record.title.breathing-deep": "ಉಸಿರಾಟ (ಆಳವಾಗಿ)",
+  "record.title.cough-shallow": "ಕೆಮ್ಮು (ಮೆಲ್ಲನೆ)",
+  "record.title.cough-heavy": "ಕೆಮ್ಮು (ಜೋರಾಗಿ)",
+  "record.title.vowel-a": "ಸ್ವರ / ಏ /",
+  "record.title.vowel-e": "ಸ್ವರ / ಈ /",
+  "record.title.vowel-o": "ಸ್ವರ / ಊ /",
+  "record.title.counting-normal": "ಎಣಿಕೆ (ಸಾಮಾನ್ಯ ಗತಿ)",
+  "record.title.counting-fast": "ಎಣಿಕೆ (ವೇಗವಾಗಿ)",
+  "record.title.done": "ಮುಕ್ತಾಯ",
+  "record.description.breathing-shallow": "ವೇಗವಾಗಿ 5 ಬಾರಿ ಉಸಿರಾಡಿ",
+  "record.description.breathing-deep": "ಆಳವಾಗಿ 5 ಬಾರಿ ಉಸಿರಾಡಿ ",
+  "record.description.cough-shallow": "ಮೆಲ್ಲಗೆ  3 ಬಾರಿ ಕೆಮ್ಮಿ ",
+  "record.description.cough-heavy": " ಆಳವಾಗಿ 3 ಬಾರಿ ಕೆಮ್ಮಿ ",
+  "record.description.vowel-a": "ಒಂದೇ ಉಸಿರಿನಲ್ಲಿ \"ಏ\" ಎಂದು ಸಾಧ್ಯವಾದಷ್ಟು ಹೊತ್ತು ಹೇಳಿ.",
+  "record.description.vowel-e": "ಒಂದೇ ಉಸಿರಿನಲ್ಲಿ \"ಈ\" ಎಂದು ಸಾಧ್ಯವಾಧಷ್ಟು ಹೊತ್ತು ಹೇಳಿ.",
+  "record.description.vowel-o": "ಒಂದೇ ಉಸಿರಿನಲ್ಲಿ \"ಊ\" ಎಂದು ಸಾಧ್ಯವಾದಷ್ಟು ಹೊತ್ತು ಹೇಳಿ.",
+  "record.description.counting-normal": "ಸಾಮಾನ್ಯ ಗತಿಯಲ್ಲಿ 1 ರಿಂದ 20 ರ ವರೆಗೆ ಎಣಿಸಿ",
+  "record.description.counting-fast": "ವೇಗವಾಗಿ 1 ರಿಂದ 20 ರ ವರೆಗೆ ಎಣಿಸಿ",
+  "record.description.done": "ಭಾಗವಹಿಸಿದ್ದಕ್ಕೆ ನಿಮಗೆ ಧನ್ಯವಾದಗಳು!",
+  "record.message.initializing": "ಪ್ರಾರಂಭಿಸಲಾಗುತ್ತಿದೆ! ದಯಮಾಡಿ ನಿರೀಕ್ಷಿಸಿ...",
+  "record.message.uploading": "ಅಪ್ಲೋಡ್ ಆಗುತ್ತಿದೆ! ದಯಮಾಡಿ ನಿರೀಕ್ಷಿಸಿ...",
+  "record.button.start_recording": "ರೆಕಾರ್ಡಿಂಗ್ ಪ್ರಾರಂಭಿಸಿ",
+  "record.button.stop_recording": "ರೆಕಾರ್ಡಿಂಗ್ ನಿಲ್ಲಿಸಿ",
+  "record.button.play_sample": "ಉದಾಹರಣೆ ಕೇಳಿರಿ",
+  "record.button.stop_playing": "ಕೇಳುವುದನ್ನು ನಿಲ್ಲಿಸಿ ",
+  "record.button.play": "ನಿಮ್ಮ ರೆಕಾರ್ಡಿಂಗ್ ಕೇಳಿರಿ",
+  "record.button.stop": "ಕೇಳುವುದನ್ನು ನಿಲ್ಲಿಸಿ",
+  "record.button.upload": "ಅಪ್ಲೋಡ್ ಮಾಡಿ",
+  "record.button.record_again": "ಮತ್ತೆ ರೆಕಾರ್ಡ್ ಮಾಡಿ",
+  "record.button.cancel": "ರದ್ದುಮಾಡಿ",
+  "thanks.heading": "ಧನ್ಯವಾದಗಳು",
+  "thanks.message.para1": "ಭಾಗವಹಿಸಿದ್ದಕ್ಕೆ ನಿಮಗೆ ಧನ್ಯವಾದಗಳು! ನಿಮ್ಮ ಸ್ನೇಹಿತರು ಮತ್ತು ಸಂಬಂಧಿಕರಿಗೆ ಈ ಅಭಿಯಾನದ ಬಗ್ಗೆ ತಿಳಿಸಿ.",
+  "thanks.message.para2": "ಇತ್ತೀಚಿನ ನವೀಕರಣಗಳನ್ನು ಪಡೆಯಲು <a href='https://www.facebook.com/coswara.iisc'> ಫೇಸ್ಬುಕ್ </a> ಮತ್ತು <a href='https://twitter.com/coswara_iisc'> ಟ್ವಿಟ್ಟರ್</a>ನಲ್ಲಿ ನಮ್ಮನ್ನು ಅನುಸರಿಸಿ.",
+  "thanks.button.start_new_session": "ಹೊಸ ಸೆಷನ್ ಪ್ರಾರಂಭಿಸಿ",
+  "thanks.warning.reuse": "ಸ್ಯಾನಿಟೈಸರ್ ಬಳಸಿ ನಿಮ್ಮ ರೆಕಾರ್ಡಿಂಗ್ ಸಾಧನವನ್ನು ಶುದ್ದೀಕರಿಸಿ. ರೆಕಾರ್ಡಿಂಗ್ ಸಾಧನವನ್ನು ಶುದ್ದೀಕರಿಸದೆ ಬೇರೆಯವರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಬಾರದು.",
+  "thanks.developed_by": "ನಿರ್ಮಾಣ",
+  "thanks.let_us_know_comments": "ನಿಮ್ಮ ಪ್ರತಿಕ್ರಿಯೆ ತಿಳಿಸಿ!",
+  "thanks.feedback": "ಪ್ರತಿಕ್ರಿಯೆ",
+  "thanks.button.send_feedback": "ಪ್ರತಿಕ್ರಿಯೆ ಕಳುಹಿಸಿ",
+  "thanks.feedback.complete": "ನಿಮ್ಮ ಪ್ರತಿಕ್ರಿಯೆಗೆ ಧನ್ಯವಾದಗಳು!",
+  "note.title": "ಟಿಪ್ಪಣಿ ",
+  "note.para1": "ನೀವು ಫೇಸ್ಬುಕ್ ಅಥವಾ ಟ್ವಿಟರ್ ಅಪ್ಲಿಕೇಶನ್ ಮುಖಾಂತರ ಈ ಪುಟವನ್ನು ವೀಕ್ಷಿಸುತ್ತಿದ್ದರೆ ನಿಮಗೆ ಮೈಕ್ರೊಫೋನ್ ಬಳಕೆಯ ತೊಂದರೆ ಬರಬಹುದು. ದಯವಿಟ್ಟು ಈ ಕೆಳಗಿನ ಯಾವುದಾದರು ಬೆಂಬಲಿತ ಬ್ರೌಸರ್ನಿಂದ url ತೆರೆಯಿರಿ.",
+  "note.supported_browsers": "ಬೆಂಬಲಿತ ಬ್ರೌಸರ್ಗಳು",
+  "browsers.chrome": "ಕ್ರೋಮ್ (Chrome)",
+  "browsers.safari": "ಸಫಾರಿ (Safari)",
+  "browsers.firefox": "ಫೈರ್ಫಾಕ್ಸ್",
+  "device.pc": "ಪಿಸಿ",
+  "device.mac": "ಮ್ಯಾಕ್",
+  "device.android": "ಆಂಡ್ರಾಯ್ಡ್",
+  "device.ios": "ಐಒಎಸ್",
+  "note.button.dismiss": "ವಜಾಗೊಳಿಸಿ",
+  "forms.label.using_mask": "ನೀವು ಮಾಸ್ಕ್ ಧರಿಸಿದ್ದೀರಾ?",
+  "forms.option.bd": "ಉಸಿರಾಟದ ತೊಂದರೆಗಳು "
 }
