Added edited ma-IN.json

--- a/projects/collect/src/assets/i18n/ma-IN.json
+++ b/projects/collect/src/assets/i18n/ma-IN.json
@@ -9,17 +9,17 @@
     "language.bengali":"বাংলা",
     "app.title": "coswara",
     "metadata.title.no_metadata": "सुरू ठेवण्यासाठी आम्हाला काही माहिती हवी आहे!",
-    "metadata.tabs.disclaimer": "अस्वीकरण",
+    "metadata.tabs.disclaimer": "ओळख",
     "metadata.tabs.metadata": "मेटाडेटा",
     "metadata.tabs.health_status": "आरोग्याची स्थिती",
-    "metadata.disclaimer.para1": "हा अभ्यास मानवी आवाज श्वसन आजार ओळखण्यासाठी संवेदनशीलता एक उच्च पातळी नोंदवली आहे इतर मागील अभ्यास बनवतो. रोग तपास मध्ये संख्याशास्त्रीय महत्व कोणतीही साधने देखील नंतरच्या तारखेला हा अनुप्रयोग भाग म्हणून राबविण्यात येईल. या अभ्यासात सहभाग पूर्णपणे ऐच्छिक आहे आणि माहिती गोळा केली वैयक्तिक ओळखण्यायोग्य माहिती नसतील.",
-    "metadata.disclaimer.para2": "संपूर्ण रेकॉर्डिंग आणि डेटा संकलन बद्दल फक्त 5 मिनिटे लागतील. कृपया रेकॉर्डिंग दरम्यान आपला चेहरा पासून 20 सें.मी. सुमारे आपले डिव्हाइस ठेवा आणि एक शांत वातावरणात रेकॉर्डिंग सुरू. रेकॉर्डिंग डिव्हाइस साफ / स्वच्छता आधी इतरांसह शेअर करणे नये.",
-    "metadata.disclaimer.para3": "विज्ञान नीतिशास्त्र समिती, इंडियन इन्स्टिट्यूट ऑफ नॉन-हल्ल्याचा रेकॉर्डिंग प्रक्रिया मान्यता दिली आहे.",
-    "metadata.disclaimer.para4": "क्लिक करून आमच्या <a href='https://coswara.iisc.ac.in/terms' target='_blank'> अटी आणि नियम </a> स्वीकार सुरू, आपण डेटा आणि उत्तेजके संग्रह पुढे जाईल",
+    "metadata.disclaimer.para1": "हा अभ्यास मागील काही अभ्यासांवर आधारित आहे, ज्यामध्ये मनुष्याच्या आवाजावरून त्याच्या श्वसनाच्या आजाराची ओळख होण्यासाठी उच्च स्तरावर संवेदनशील सूचना केलेली आहे. आजाराचा शोध लावण्यासाठी संख्यात्मक महत्व असलेल्या कोणत्याही उपकरणांमध्ये या अँप च्या एका भागाच्या रूपामध्ये सुद्धा लागू करण्यात येईल. या अभ्यासामध्ये भागीदारी ही स्वैच्छिक आहे आणि एकत्र केलेल्या विवरणांमध्ये वैयक्तिक ओळख ही योग्य माहिती असणार नाही.",
+    "metadata.disclaimer.para2": "संपूर्ण रेकॉर्डिंग आणि डेटा संकलन बद्दल फक्त 5 मिनिटे लागतील. कृपया रेकॉर्डिंग दरम्यान आपला चेहरा पासून 20 सें.मी. सुमारे आपले डिव्हाइस ठेवा आणि एक शांत वातावरणात रेकॉर्डिंग सुरू करा. रेकॉर्डिंग डिव्हाइस इथरांना देणे आधी साफ आणि स्वच्छ ठेवण्या गरजेच आहे.",
+    "metadata.disclaimer.para3": "भारतीय विज्ञान संस्था नीतिशास्त्र समिती ऑफ नॉन-हल्ल्याचा रेकॉर्डिंग प्रक्रिया मान्यता दिली आहे.",
+    "metadata.disclaimer.para4": "क्लिक करून आमच्या <a href='https://coswara.iisc.ac.in/terms' target='_blank'> अटी आणि नियम </a> स्वीकारला गेले केले आहेत, आपल्या डेटा आणि उत्तेजके संग्रह पुढे जाईल",
     "metadata.disclaimer.para4.alternate": "आपण स्वीकारले आहे आमच्या <a href='https://coswara.iisc.ac.in/terms' target='_blank'> अटी आणि नियम </a>",
-    "metadata.disclaimer.para5": "काही प्रश्न, कृपया संपर्क <a href='mailto:sriramg@iisc.ac.in'> sriramg@iisc.ac.in </a>",
+    "metadata.disclaimer.para5": "काही प्रश्न असेल तर कृपया संपर्क करा <a href='mailto:sriramg@iisc.ac.in'> sriramg@iisc.ac.in </a>",
     "metadata.buttons.start": "प्रारंभ",
-    "metadata.buttons.start_over": "प्रारंभ",
+    "metadata.buttons.start_over": "पुन्हा प्रारंभ",
     "metadata.buttons.continue": "सुरू",
     "metadata.buttons.previous": "मागील",
     "metadata.buttons.next": "पुढे",
@@ -27,7 +27,7 @@
     "forms.label.age": "वय",
     "forms.label.gender": "लिंग",
     "forms.label.english_proficient": "आपण इंग्रजी मध्ये निष्णात आहे का?",
-    "forms.label.returning_user": "आपण परत आहे का?",
+    "forms.label.returning_user": "आपण या आधी रेकॉर्डिंग केलात का?",
     "forms.label.location": "स्थान",
     "forms.label.country": "देश",
     "forms.label.state": "राज्य / प्रांत",
@@ -36,7 +36,7 @@
     "forms.label.health_conditions": "आरोग्य स्थिती",
     "forms.errors.required": "आवश्यक",
     "forms.errors.age.valid": "वैध वय दिसत नाही",
-    "forms.errors.field_required": "म्हणून चिन्हांकित केलेले सर्व फील्ड (*) अनिवार्य आहेत",
+    "forms.errors.field_required": "म्हणून (*) चिन्हांकित केलेले सर्व फील्ड अनिवार्य आहेत",
     "forms.options.male": "पुरुष",
     "forms.options.female": "स्त्री",
     "forms.options.other": "इतर",
@@ -44,12 +44,12 @@
     "forms.options.no": "नाही",
     "forms.option.positive_mild": "मी Covid-19 ओळखले आणि सौम्य लक्षणे आले आहेत",
     "forms.option.positive_moderate": "मी Covid-19 ओळखले आणि माफक प्रमाणात गंभीर लक्षणे आले आहेत",
-    "forms.option.recovered_full": "मी Covid-19 ओळखला गेला होता आणि पूर्णपणे तंदुरुस्त आहे",
-    "forms.option.resp_illness_not_identified": "मी इतर पूर्व-विद्यमान श्वसन आजार आहे पण Covid-19 सह ओळखले गेले नाही",
-    "forms.option.no_resp_illness_exposed": "मी श्वसन आजार आहे पण मी संपर्क व्हायरस उघड केले गेले असावे",
+    "forms.option.recovered_full": "मी Covid-19 ओळखला गेला होता आणि पूर्णपणे बरा आहे",
+    "forms.option.resp_illness_not_identified": "मी इतर पूर्व-विद्यमान श्वसन आजार आहे पण Covid-19 सह ओळखले गेलो नाही",
+    "forms.option.no_resp_illness_exposed": "मी श्वसन आजार आहे पण मी संपर्क व्हायरस उघड केले गेलो असावे",
     "forms.option.healthy": "मी कोणत्याही श्वसन आजार नाही",
     "forms.option.none_of_the_above": "वरीलपैकी काहीही नाही",
-    "forms.option.cold": "थंड",
+    "forms.option.cold": "सर्दी",
     "forms.option.cough": "खोकला",
     "forms.option.fever": "ताप",
     "forms.option.pneumonia": "न्यूमोनिया",
@@ -60,14 +60,14 @@
     "forms.option.ht": "उच्च रक्तदाब",
     "forms.option.ihd": "Ischemic हृदयरोग",
     "forms.option.diabetes": "मधुमेह",
-    "record.message.info": "एक शांत वातावरणात खात्री आहे की आपण आहेत याची खात्री करा आणि आपला चेहरा पासून 20 सें.मी. सुमारे आपले डिव्हाइस ठेवा",
+    "record.message.info": "एक शांत वातावरणात आपण आहेत याची खात्री करा आणि आपला चेहरा पासून 20 सें.मी. सुमारे आपले डिव्हाइस ठेवा",
     "record.title.breathing-shallow": "श्वास (उथळ)",
     "record.title.breathing-deep": "श्वास (खोल)",
     "record.title.cough-shallow": "खोकला (उथळ)",
     "record.title.cough-heavy": "खोकला (जड)",
-    "record.title.vowel-a": "स्वर / एक /",
+    "record.title.vowel-a": "स्वर / ए /",
     "record.title.vowel-e": "स्वर / ई /",
-    "record.title.vowel-o": "स्वर / ओ /",
+    "record.title.vowel-o": "स्वर / ऊ /",
     "record.title.counting-normal": "मतमोजणी (सामान्य)",
     "record.title.counting-fast": "मतमोजणी (जलद)",
     "record.title.done": "पूर्ण झाले",
@@ -75,9 +75,9 @@
     "record.description.breathing-deep": "श्वास गंभीरपणे 5 वेळा",
     "record.description.cough-shallow": "हळूवारपणे 3 वेळा खोकला",
     "record.description.cough-heavy": "गंभीरपणे 3 वेळा खोकला",
-    "record.description.vowel-a": "सांगा / \"केले\" आणि मिळवणं म्हणून शक्य तितक्या लांब एक /",
-    "record.description.vowel-e": "सांगा / ई / \"बीट\" आणि शक्य तितक्या लांब मिळवणं म्हणून",
-    "record.description.vowel-o": "सांगा / O \"छान\" आणि मिळवणं म्हणून शक्य तितक्या लांब /",
+    "record.description.vowel-a": "सांगा / "ए" म्हणून शक्य तितक्या लांबा /",
+    "record.description.vowel-e": "सांगा / "ई" म्हणून शक्य तितक्या लांबा /",
+    "record.description.vowel-o": "सांगा / "ऊ" म्हणून शक्य तितक्या लांबा /",
     "record.description.counting-normal": "1 ते 20 मोजा",
     "record.description.counting-fast": "जलद 1 ते 20 मोजा",
     "record.description.done": "आपल्या सहभागाबद्दल धन्यवाद!",
@@ -90,20 +90,20 @@
     "record.button.play": "प्ले",
     "record.button.stop": "थांबवा",
     "record.button.upload": "अपलोड करा",
-    "record.button.record_again": "पुन्हा रेकॉर्ड",
+    "record.button.record_again": "पुन्हा रेकॉर्ड करा",
     "record.button.cancel": "रद्द करा",
     "thanks.heading": "आपल्या सहभागाबद्दल धन्यवाद!",
-    "thanks.message.para1": "या एक भाग असल्याने धन्यवाद! आपले मित्र आणि नातेवाईक वाटून करा.",
+    "thanks.message.para1": "आपण भाग घेतल्या बद्दल धन्यवाद! आपले मित्र आणि नातेवाईकांना पाठवा.",
     "thanks.message.para2": "येथे अनुसरण करा <a href='https://www.facebook.com/coswara.iisc'> फेसबुक </a> आणि <a href='https://twitter.com/coswara_iisc'> ट्विटर </a> नवीनतम अद्यतने मिळविण्यासाठी.",
     "thanks.button.start_new_session": "एक नवीन सत्र प्रारंभ",
-    "thanks.warning.reuse": "रेकॉर्डिंग डिव्हाइस साफ / स्वच्छता आधी इतरांसह शेअर करणे नये.",
+    "thanks.warning.reuse": "रेकॉर्डिंग डिव्हाइस साफ / स्वच्छता आधी इतरांसह शेअर करू नये.",
     "thanks.developed_by": "विकसित",
     "thanks.let_us_know_comments": "आम्हाला आपल्या टिप्पण्या कळू द्या!",
     "thanks.feedback": "अभिप्राय",
     "thanks.button.send_feedback": "अभिप्राय पाठवा",
     "thanks.feedback.complete": "आपल्या अभिप्रायाबद्दल धन्यवाद!",
     "note.title": "टीप",
-    "note.para1": "आपण Facebook किंवा Twitter अनुप्रयोग पासून पृष्ठ ला भेट असाल तर, आपण मायक्रोफोन वापरत मध्ये अडचण होऊ शकते. कृपया समर्थित ब्राउझर कोणत्याही खालील URL उघडा.",
+    "note.para1": "आपण Facebook किंवा Twitter अनुप्रयोग पासून पृष्ठ ला भेट असाल तर, आपल्या मायक्रोफोन वापरण्या मध्ये अडचण होऊ शकते. कृपया समर्थित ब्राउझर कोणत्याही खालील URL उघडा.",
     "note.supported_browsers": "समर्थित ब्राउझर",
     "browsers.chrome": "Chrome",
     "browsers.safari": "सफारी",
