--- a/projects/collect/src/assets/i18n/en-US.json
+++ b/projects/collect/src/assets/i18n/en-US.json
@@ -115,5 +115,6 @@
 	"note.button.dismiss": "Dismiss",
 
 	"forms.label.using_mask": "Are you wearing a mask now?",
-	"forms.option.bd": "Breathing Difficulties"
+	"forms.option.bd": "Breathing Difficulties",
+	"forms.options.st": "Sore Throat"
 }
