--- a/projects/collect/src/assets/i18n/en-US.json
+++ b/projects/collect/src/assets/i18n/en-US.json
@@ -116,5 +116,5 @@
 
 	"forms.label.using_mask": "Are you wearing a mask now?",
 	"forms.option.bd": "Breathing Difficulties",
-	"forms.options.st": "Sore Throat"
+	"forms.option.st": "Sore Throat"
 }
