--- a/projects/collect/src/assets/i18n/ka-IN.json
+++ b/projects/collect/src/assets/i18n/ka-IN.json
@@ -114,5 +114,6 @@
   "device.ios": "ಐಒಎಸ್",
   "note.button.dismiss": "ವಜಾಗೊಳಿಸಿ",
   "forms.label.using_mask": "ನೀವು ಮಾಸ್ಕ್ ಧರಿಸಿದ್ದೀರಾ?",
-  "forms.option.bd": "ಉಸಿರಾಟದ ತೊಂದರೆಗಳು "
+  "forms.option.bd": "ಉಸಿರಾಟದ ತೊಂದರೆಗಳು ",
+  "forms.option.st": "ಗಂಟಲು ಕೆರತ"
 }
