--- a/projects/collect/src/assets/i18n/ta-IN.json
+++ b/projects/collect/src/assets/i18n/ta-IN.json
@@ -114,5 +114,6 @@
  "device.ios": "iOS",
  "note.button.dismiss": "நிராகரி",
  "forms.label.using_mask": "நீங்கள் இப்பொழுது முகமூடி அணிந்திருக்கிறீர்களா??",
-	"forms.option.bd": "சுவாச சிரமங்கள்"
+	"forms.option.bd": "சுவாச சிரமங்கள்",
+	"forms.option.st": "தொண்டை வலி"
 }
