--- a/projects/collect/src/assets/i18n/ma-IN.json
+++ b/projects/collect/src/assets/i18n/ma-IN.json
@@ -75,9 +75,9 @@
     "record.description.breathing-deep": "श्वास गंभीरपणे 5 वेळा",
     "record.description.cough-shallow": "हळूवारपणे 3 वेळा खोकला",
     "record.description.cough-heavy": "गंभीरपणे 3 वेळा खोकला",
-    "record.description.vowel-a": "सांगा / "ए" म्हणून शक्य तितक्या लांबा /",
-    "record.description.vowel-e": "सांगा / "ई" म्हणून शक्य तितक्या लांबा /",
-    "record.description.vowel-o": "सांगा / "ऊ" म्हणून शक्य तितक्या लांबा /",
+    "record.description.vowel-a": "सांगा / \"ए\" म्हणून शक्य तितक्या लांबा /",
+    "record.description.vowel-e": "सांगा / \"ई\" म्हणून शक्य तितक्या लांबा /",
+    "record.description.vowel-o": "सांगा / \"ऊ\" म्हणून शक्य तितक्या लांबा /",
     "record.description.counting-normal": "1 ते 20 मोजा",
     "record.description.counting-fast": "जलद 1 ते 20 मोजा",
     "record.description.done": "आपल्या सहभागाबद्दल धन्यवाद!",
