--- a/projects/collect/src/assets/i18n/hi-IN.json
+++ b/projects/collect/src/assets/i18n/hi-IN.json
@@ -8,9 +8,9 @@
 	"language.telugu":"తెలుగు",
 	"language.bengali":"বাংলা",
 "app.title": "coswara",
-"metadata.title.no_metadata": "We need some information to continue!",
+"metadata.title.no_metadata": "हमें कुछ जानकारी चाहिए !",
 "metadata.tabs.disclaimer": "अस्वीकरण",
-"metadata.tabs.metadata": "Metadata",
+"metadata.tabs.metadata": "जानकारी",
 "metadata.tabs.health_status": "स्वास्थ्य की स्थिति",
 "metadata.disclaimer.para1": "यह अध्ययन अन्य पिछले अध्ययनों पर आधारित है, जिन्होंने मानव आवाज से सांस की बीमारी की पहचान के लिए उच्च स्तर की संवेदनशील सूचना दी है। रोग का पता लगाने के लिए सांख्यिकीय महत्व वाले किसी भी उपकरण को बाद में इस एप के हिस्से के रूप में भी लागू किया जाएगा। इस अध्ययन में भागीदारी स्वैच्छिक है और एकत्र किए गए विवरणों में व्यक्तिगत रूप से पहचान योग्य जानकारी नहीं होगी। ",
 "metadata.disclaimer.para2": "पूरा रिकॉर्डिंग और डेटा संग्रह केवल 5 मिनट लेगा। कृपया रिकॉर्डिंग के दौरान अपने चेहरे से लगभग 20 सेंटीमीटर दूर अपने रिकॉर्डिंग डिवाइस अथवा फ़ोन को रखें और एक शांत वातावरण में रिकॉर्डिंग करें। सफाई/सैनिटाइज़ किये बगैर, रिकॉर्डिंग डिवाइस दूसरों के साथ साझा नहीं किया जाना चाहिए।",
