Main site translation - first set of changes

--- a/src/assets/i18n/hi-IN.json
+++ b/src/assets/i18n/hi-IN.json
@@ -1,12 +1,4 @@
 {
 	"app.full_title": "प्रोजेक्ट कोसवारा",
-	"app.title": "coswara",
-	"home.button.read": "और पढो",
-	"home.button.record": "डेटा रिकॉर्डिंग के लिए आगे बढ़ें",
-	"home.content": "भारतीय विज्ञान संस्थान (IISc) बैंगलोर द्वारा प्रोजेक्ट कोसवाड़ा श्वसन, खांसी और भाषण ध्वनियों के आधार पर कोविद -19 के लिए एक नैदानिक उपकरण बनाने का एक प्रयास है। प्रोजेक्ट अभी डेटा कलेक्शन स्टेज में है। इसमें प्रतिभागियों को साँस लेने की आवाज़, खाँसी की आवाज़, स्वर ध्वनियों के निरंतर स्वर और एक गिनती व्यायाम की रिकॉर्डिंग प्रदान करने की आवश्यकता होती है जो आपके समय के लगभग 5-7 मिनट लगते हैं। प्रतिभागियों से व्यक्तिगत रूप से पहचान योग्य डेटा एकत्र नहीं किया जाता है।",
-	"tabs.about": "के बारे में",
-	"tabs.faq": "FAQ",
-	"tabs.home": "होम",
-	"tabs.news": "मीडिया",
-	"tabs.people": "लोग"
+	"app.title": "coswara"
 }
