--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -3,10 +3,10 @@
 	"app.title": "coswara",
 	"home.button.read": "READ MORE",
 	"home.button.record": "PROCEED TO DATA RECORDING",
-	"home.content": "Project Coswara by Indian Institute of Science (IISc), Bangalore is an attempt to build a diagnostic tool for Covid-19 based on respiratory, cough and speech sounds. The project is in the data collection stage now. It requires the participants to provide a recording of breathing sounds, cough sounds, sustained phonation of vowel sounds and a counting exercise which takes around 5-7 minutes of your time. No personally identifiable data is collected from the participants.",
+	"home.content": "Project Coswara by <a href=\"https://www.iisc.ac.in\" target=\"_blank\">Indian Institute of Science (IISc) Bangalore</a> is an attempt to build a diagnostic tool for Covid-19 based on respiratory, cough and speech sounds.\n            The project is in the data collection stage now. It requires the participants to provide a recording of breathing sounds, cough sounds, sustained phonation of vowel sounds and a counting exercise which takes around 5-7 minutes of your time. No personally identifiable data is collected from the participants.",
 	"tabs.about": "About",
 	"tabs.faq": "FAQ",
 	"tabs.home": "Home",
-	"tabs.news": "Media",
+	"tabs.media": "Media",
 	"tabs.people": "People"
 }
