--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -27,6 +27,44 @@
 	"about.modelling.para1": "The collected data will be analysed using signal processing and machine learning techniques. The goal is to build mathematical models aiding identification of ‘infection prints’ from voice samples. This stage is a work-in-progress while we create the dataset.",
 	"about.modelling.para2": "We also aim at releasing the collected dataset in a structured form openly via a Github platform. This is to pool effort from the larger research community to contribute in making point-of-care diagnosis a reality soon.",
 	"about.tool.para1": "We aim to release the diagnosis tool as a web/mobile application. Similar to the dataset creation stage, the application requests for recording the voice samples, and preferably provides a score indicating the probability of COVID-19 infection. The final deployment of the tool is subject to validation with clinical findings, and authorization/approval from competent authorities.",
-	"about.tool.para2": "Given the highly simplistic and cost effective nature of this diagnosis approach, we hypothesize that even a partial success of the tool would enable a massive deployment as a first line of diagnosis for the pandemic. The potential diagnostic tool will not replace chemical testing but merely supplement the existing testing methods."
+	"about.tool.para2": "Given the highly simplistic and cost effective nature of this diagnosis approach, we hypothesize that even a partial success of the tool would enable a massive deployment as a first line of diagnosis for the pandemic. The potential diagnostic tool will not replace chemical testing but merely supplement the existing testing methods.",
 
+	"media.title": "in the news",
+	"media.content": "We appreciate the media’s help in promoting our research and positively contributing to the data collection.",
+	"team.title": "meet the team",
+	"name.sriram": "Dr. Sriram Ganapathy",
+	"name.pkg": "Dr. Prasanta Kumar Ghosh",
+	"name.anand": "Anand Mohan",
+	"name.anuroop": "Anuroop Iyengar",
+	"name.neeraj": "Dr. Neeraj Sharma",
+	"name.prashant": "Prashant Krishnan",
+	"name.nirmala": "Dr. R Nirmala",
+	"name.raksheet": "Raksheet Bhat",
+	"name.shahbaz": "Shahbaz Sultan",
+	"name.shreyas": "Shreyas Ramoji",
+	"name.srikanth": "Srikanth Raj Chetupalli",
+	"place.iisc": "IISc Bangalore",
+	"place.cmu": "CMU, USA",
+	"place.cogknit": "Cogknit Semantics",
+	"place.upgrad": "upGrad",
+	"team.title.asst_prof": "Assistant Professor",
+	"team.title.assoc_prof": "Associate Professor",
+	"team.title.ceo": "CEO",
+	"team.title.ra": "Research Assistant",
+	"team.title.mtech_ai": "MTech(Artificial Intelligence)",
+	"team.title.post_doc": "Postdoctoral Fellow",
+	"team.title.mo": "Medical Officer",
+	"team.title.sde": "Software Engineer",
+	"team.title.phd": "PhD Scholar",
+	"team.areas.sriram": "Speech Recognition, Deep Learning, Neuroscience",
+	"team.areas.pkg": "Speech Production, Articulation, Speech Disorders",
+	"team.areas.anand": "Speech Recognition",
+	"team.areas.anuroop": "",
+	"team.areas.neeraj": "Auditory Neuroscience, Signal Processing",
+	"team.areas.prashant": "Speaker Recognition",
+	"team.areas.nirmala": "",
+	"team.areas.raksheet": "",
+	"team.areas.shahbaz": "",
+	"team.areas.shreyas": "Speaker Recognition, Machine Learning",
+	"team.areas.srikanth": "Signal Processing, Speech Recognition"
 }
